--- a/genArt2/frontend/tsconfig.app.json
+++ b/genArt2/frontend/tsconfig.app.json
@@ -27,5 +27,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "src/components/Feed.tsx",]
+  "include": ["src", "src/components/BgsFeed.tsx",]
 }
