--- a/genArt2/backend/package.json
+++ b/genArt2/backend/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.0.14",
     "@prisma/client": "5.16.1",
+    "@types/cookie-parser": "^1.4.7",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "prisma": "^5.16.1"
