--- a/genArt2/frontend/package.json
+++ b/genArt2/frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.2.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-multi-carousel": "^2.8.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
